docs/assets/styles/_structure.scss
/* ==========================================================================
   Structure
   ========================================================================== */


/* Canvas
   ========================================================================== */

.site-canvas {
  background: tint($base-color, 96%);
}


/* Header
   ========================================================================== */

.site-header {
  position: relative;
  z-index: 10;
  background: #fff;
  color: $base-font-color;
  padding: $global-spacing 0;
  box-shadow: inset 0 -1px 0 0 $base-alpha-color;
  > .inner {
    @extend .row, .row--centered;
  }
  @include media(medium-up) {
    padding: ($global-spacing * 2) 0;
  }
}

/* Headline */

.site-headline {
  float: left;
  margin: -0.5rem 0;
}

.site-title {
  margin: 0;
  white-space: nowrap;
  font-size: 1rem;
  line-height: 2;
  * {
    vertical-align: top;
    display: inline-block;
    word-spacing: -0.26rem;
  }
  a {
    &, &:visited {
      color: inherit;
    }
  }
  &__logo {
    width: auto;
    height: 2rem;
  }
  &__text {
    @extend .visually-hidden;
  }
  &__label {
    @extend .antialiased;
    margin: 0.45rem 0 0 0.5rem;
    background: rgba($base-color, 0.64);
    color: #fff;
    border-radius: $base-border-radius;
    padding: 0 0.25rem;
    font-size: 0.75rem;
    line-height: 1.25rem;
    text-transform: uppercase;
    font-weight: $base-font-bold;
  }
}

/* Navigation */

.site-prime-nav {
  font-weight: $base-font-bold;

  @include media(medium-up) {
    float: right;
    margin: -0.5rem 0;
  }

  .toggle-menu {
    position: absolute;
    top: 0.5rem;
    right: $global-spacing;
    margin: 0;

    a {
      @extend .button, .button--base-unbounded, .button--medium, .button--text-hidden;
      vertical-align: top;

      &:before {
        @extend %oam-ds-icon-hamburger-menu;
      }

      @include media(medium-up) {
        &:before {
          font-size: 1.5rem;
        }
      }
    }

    @include media(small-up) {
      right: $global-spacing * 2;
    }

    @include media(medium-up) {
      top: 1.5rem;
    }

    @include media(large-up) {
      display: none;
    }
  }
}

.menu-wrapper {
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  clear: both;
  background: #fff;
  padding: $global-spacing;
  box-shadow: 0 4px 12px 0 $base-alpha-color, 0 1px 0 0 $base-alpha-color;

  /* Animation */

  margin-top: - $global-spacing;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.16s ease 0s, margin 0.16s ease 0s, visibility 0.16s linear 0s;

  &.menu-wrapper--open {
    margin-top: 0;
    opacity: 1;
    visibility: visible;
  }

  @include media(small-up) {
    padding: $global-spacing ($global-spacing * 2);
  }

  @include media(large-up) {
    position: initial;
    float: left;
    width: auto;
    margin-top: 0;
    background: none;
    box-shadow: none;
    padding: 0;
    opacity: 1;
    visibility: visible;
  }
}

.global-menu {
  list-style: none;
  margin: 0;
  padding: 0;
  @include media(medium-up) {
    float: left;
    > li {
      float: left;
      margin: 0 ($global-spacing / 2) 0 0;
      &:last-child {
        margin-right: 0;
      }
    }
  }
}

.global-menu-item {
  display: block;
  line-height: 2rem;
  font-size: 1rem;
  padding: 0 ($global-spacing / 2);
  border-radius: $base-border-radius;
  &, &:visited {
    color: $base-font-color;
  }
  &--active {
    background: rgba($base-color, 0.08);
  }
}


/* Body
   ========================================================================== */

.site-body {
  @extend .clearfix;
}


/* Footer
   ========================================================================== */

.site-footer {
  box-shadow: inset 0 1px 0 0 $base-alpha-color;
  background: #fff;
  padding: 2rem 0;
  text-align: center;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: rgba($base-font-color, 0.64);
  > .inner {
    @extend .row, .row--centered;
  }
  *:last-child {
    margin-bottom: 0;
  }
}


/* Pages
   ========================================================================== */

.page--docs {

  .page__header {
    text-align: left;
    // background-image: url("../graphics/layout/oam-logo-symbol.svg");
  }

  .page__headline {
    @include col(12/12);
    @include media(medium-up) {
      @include col(10/12);
    }
    @include media(large-up) {
      @include col(8/12);
    }
  }

  .page__main-content {
    @include col(12/12);
    @extend .prose;
    
    @include media(medium-up) {
      @include col(9/12);
      @include shift(-3/12);
    }

    @include media(large-up) {
      @include col(8/12);
    }
  }

  .page__aside-content {
    @include col(12/12);

    padding-bottom: ($global-spacing * 2);
    margin-bottom: ($global-spacing * 2);
    box-shadow: inset 0 -1px 0 0 $base-alpha-color;

    @include media(medium-up) {
      @include col(3/12);
      @include shift(9/12);

      box-shadow: none;
      padding-bottom: 0;
    }
  }

  .page__aside-title {
    @extend .heading-alt;
    font-size: 0.875rem;
    line-height: 1.25rem;
    margin-bottom: $global-spacing;
  }

}

.aside-menu {
  list-style: none;
  margin: 0;
  padding: 0;
  font-weight: $base-font-bold;

  > li {
    margin: 0 0 ($global-spacing / 2) 0;
    &:last-child {
      margin-bottom: 0;
    }
  }
}

.aside-menu-item {
  display: block;
  line-height: 2rem;
  font-size: 1rem;
  padding: 0 ($global-spacing / 2);
  border-radius: $base-border-radius;
  &, &:visited {
    color: $base-font-color;
  }
  &--active {
    background: rgba($base-color, 0.08);
  }
}

